test/compare/testdata/program_imports/imported_and_not_used.go
// errorcheck

package main

import "fmt"   // ERROR "^imported and not used: \"fmt\"$"
import p "os"  // ERROR "^imported and not used: \"os\" as p$"
import . "net" // ERROR "^imported and not used: \"net\"$"
import _ "strings"

func main() {}
